[package]
name = "pioneerctl"
version = "0.1.4"
authors = ["NomisIV <simon@nomisiv.com>"]
edition = "2018"
description = "A remote control for certain Pioneer recievers"
repository = "https://github.com/NomisIV/pioneerctl/"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [ "pioneer", "cli", "reciever", "remote-control" ]
categories = [ "command-line-utilities", "hardware-support" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3" # For commandline interface
rustyline = "8.0" # For readline?
colored = "2.0" # For colored prompt
die-exit = "0.3" # "Error handling"

